Adding create client in api
